[Steven] fix(category) - remove old category table and file
